# Phylax

./: .gitignore  AGENTS.md  AUDIT-REPORT-PHASE1.md  AUDIT-REPORT-PHASE2.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  README.es.md  README.md  SECURITY.md  STATS.md  agentguard.toml  errors.txt  eu_report.json  install.ps1
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/agentguard-audit/: Cargo.toml
crates/agentguard-audit/src/: formats.rs  lib.rs
crates/agentguard-cli/: Cargo.toml
crates/agentguard-cli/src/: main.rs
crates/agentguard-cli/src/cmd/: agent.rs  audit.rs  compliance.rs  daemon.rs  dex.rs  global.rs  init.rs  mcp.rs  mod.rs  project.rs  run.rs  scan.rs  serve.rs  status.rs  update.rs
crates/agentguard-cli/tests/: e2e.rs
crates/agentguard-cloud/: Cargo.toml
crates/agentguard-cloud/src/: config.rs  lib.rs  sync.rs
crates/agentguard-cloud/src/sinks/: mod.rs
crates/agentguard-compliance/: Cargo.toml
crates/agentguard-compliance/src/: lib.rs
crates/agentguard-core/src/: types.rs
crates/agentguard-daemon/: Cargo.toml
crates/agentguard-daemon/src/: file_watcher.rs  handler.rs  lib.rs  main.rs  orchestrator.rs  watcher.rs
crates/agentguard-dex/: Cargo.toml
crates/agentguard-dex/src/: lib.rs
crates/agentguard-enforce/src/: ace.rs  coordinator.rs  lib.rs
crates/agentguard-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/agentguard-ipc/tests/: integration.rs
crates/agentguard-manifest/: Cargo.toml
crates/agentguard-manifest/src/: compiled.rs  discovery.rs  lib.rs  mandatory.rs  parser.rs
crates/agentguard-mascot/: Cargo.toml
crates/agentguard-mascot/src/: controller.rs  lib.rs  main.rs  sprite.rs  sprites.rs  view.rs
crates/agentguard-mcp/: Cargo.toml
crates/agentguard-mcp/src/: lib.rs
crates/agentguard-notify/src/: lib.rs  notifier.rs
crates/agentguard-policy/src/: lib.rs
crates/agentguard-probe/src/: classifier.rs  etw.rs  lib.rs  poller.rs  tracker.rs
crates/agentguard-scanner/: Cargo.toml
crates/agentguard-scanner/src/: lib.rs
crates/agentguard-spawn/: Cargo.toml
crates/agentguard-spawn/src/: main.rs  process.rs  token.rs
crates/agentguard-store/: Cargo.toml
crates/agentguard-store/src/: lib.rs  migrations.rs  queries.rs
crates/agentguard-tui/src/: lib.rs  main.rs
crates/agentguard-web/: Cargo.toml
crates/agentguard-web/src/: dashboard.html  lib.rs  routes.rs
docs/: 01-architecture.md  02-core-types.md  03-manifest-policy.md  06-ipc-daemon-cli.md  07-deny-enforcement-audit.md  08-deny-completion-audit-matrix.md  eu-ai-act-compliance-reference.md  mcp-governance-research.md  quickstart.md
docs/adr/: 001-etw-vs-polling.md  002-deny-aces-vs-minifilter-phase1.md  003-sqlite-vs-config-file.md  004-named-pipes-vs-other-ipc.md  005-cpp-minifilter-vs-rust.md  006-agentguard-toml-format.md  007-phase2-minifilter-enforcement-plan.md  008-simplified-everyone-deny-enforcement.md  009-audit-logging-cloud-architecture.md  README.md
docs/research/: agent-security-gaps-2025-2026.md  ai-agent-non-coding-security-gaps.md
landing/: .gitignore  package-lock.json  package.json  tailwind.config.mjs
landing/public/: llms-full.txt  llms.txt  sitemap.xml
landing/src/components/: Hero.astro  HowItWorks.astro  InstallSection.astro  PolicyCards.astro  RealExample.astro  SiteFooter.astro  WhyAgentGuard.astro  WhyPhylax.astro
landing/src/layouts/: Base.astro
landing/src/pages/: 404.astro  development-path.astro  disclaimer.astro  docs.astro  faq.astro  index.astro  license.astro
landing/src/styles/: experience.css  global.css
scripts/: agentguard-doctor.ps1  agentguard-go.ps1  publish-release.ps1  winget-api-push.ps1
winget/: TheUser99-spec.AgentGuard.installer.yaml  TheUser99-spec.AgentGuard.locale.en-US.yaml
