[package]
name = "agentguard-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "phylax"
path = "src/main.rs"

[dependencies]
agentguard-core.workspace = true
agentguard-manifest.workspace = true
agentguard-ipc.workspace = true
agentguard-compliance.workspace = true
agentguard-scanner.workspace = true
agentguard-daemon = { path = "../agentguard-daemon" }
agentguard-tui = { path = "../agentguard-tui" }
chrono.workspace = true
clap.workspace = true
tokio.workspace = true
windows-sys.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
