[package]
name = "agentguard-cloud"
version = "0.1.0"
edition = "2021"
description = "Cloud sync engine for Phylax audit events — local-first, batch upload to configurable sinks"

[dependencies]
agentguard-core = { path = "../agentguard-core" }
agentguard-store = { path = "../agentguard-store" }
agentguard-audit = { path = "../agentguard-audit" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { workspace = true }
flate2 = "1.0"
zstd = "0.13"
toml = "0.8"
