[package]
name        = "agentguard-manifest"
description = "Parser de agentguard.toml. Validacion y compilacion a GlobSets."
version.workspace = true
edition.workspace = true

[dependencies]
agentguard-core = { workspace = true }
serde           = { workspace = true }
toml            = { workspace = true }
globset         = { workspace = true }
thiserror       = { workspace = true }
walkdir         = "2"

[dev-dependencies]
tempfile = "3"
