[package]
name        = "agentguard-store"
description = "SQLite persistence layer — rules, audit log, sessions"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
agentguard-core = { workspace = true }
rusqlite        = { workspace = true }
thiserror       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
chrono          = { workspace = true }
tracing         = { workspace = true }
sha2            = "0.10"
